# fast-fuzzy-rs

./: .gitignore  Cargo.toml  jest.config.js  package-lock.json  package.json  rustfmt.toml
.github/workflows/: ci.yml
benches/: fuzzy_bench.rs
scripts/: generate-bindings.js
src/: algo.rs  lib.rs  normalization.rs  search_options.rs  search_result.rs
test/: fuzzy.test.js
