[package]
name = "fast-fuzzy-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance fuzzy string matching library"
license = "MIT"
repository = "https://github.com/IgorFilippov3/fast-fuzzy-rs"
keywords = ["fuzzy", "string", "matching", "search", "similarity"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2.0", features = ["napi8"] }
napi-derive = "2.0"

rayon = "1.7"
memchr = "2.6"
unicode-normalization = "0.1"

[build-dependencies]
napi-build = "2.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
opt-level = 3

[[bench]]
name = "fuzzy_bench"
harness = false
